--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -36,3 +36,19 @@ body{
 .info {
   color: blue;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(0, 0, 0); 
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #5c5c5c; 
+}
